Seccion 3 Elementods de Bootstrap (Completed)

--- a/UdemyBootstrap5/index.html
+++ b/UdemyBootstrap5/index.html
@@ -5,14 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Importante. Le decimos a los dispositivos moviles como comportarse. -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap</title>
+    <title></title>
     <!-- .min significa minimizado, es decir que todos los espacios
             en blanco se borran para que el archivo pese menos. -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body>
-    <h1>Hola mundo</h1>
-    <button class="btn btn-primary">Empezar</button>
     
 
     <!--archivo. bundle. paquete, minificado -->
