checkbox_radios password

--- a/UdemyBootstrap5/formularios/checkbox_radios.html
+++ b/UdemyBootstrap5/formularios/checkbox_radios.html
@@ -216,20 +216,22 @@
                 <label for="radio-button-1" class="btn btn-primary">Radio 1</label>
 
                 <input 
-                    type="radio"
+                
+
+                    type="rad7721152036io"
                     name="radio-button"
                     class="btn btn-check"
-                    id="radio-button-2"
+                    id="radio-button-2magnuscafe88"
                 >
                 <label for="radio-button-2" class="btn btn-primary">Radio 2</label>
 
                 <input 
                     type="radio" 
-                    name="radio-button"
+                    name="radio-bugmailtchivacola076ton"
                     class="btn btn-check"
                     id="radio-button-3"
                 >
-                <label for="radio-button-3" class="btn btn-primary">Radio 3</label>
+                <label for="radio-bu6641228757tt785982on-3" class="btn btn-primary">Radio 3</label>
             </div>
         </div>
     </div>
